# ADA502Gruppe5

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  main.py  met_service.py  pyproject.toml
backend/Tests/: METHarvest  test_METHarvest.py  test_met_service.py
keycloak/import/: ADA_502-realm.json  ADA_502-users-0.json  realm-export.json
lib/: frcm-0.1.0-py3-none-any.whl
src/backend/: __init__.py  auth.py  fetch_service.py  frcm_service.py  indicator.py  main.py  met_service.py  models.py  test_METHarvest.py  test_indicator.py  test_met_service.py
web-docs/: mkdocs.yml
web-docs/docs/: index.md
web-docs/site/: 404.html  index.html
web-docs/site/search/: search_index.json
