[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "frcm",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]

[tool.uv.sources]
frcm = { path = "../lib/frcm-0.1.0-py3-none-any.whl" }
